--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "nodemailer": "^6.4.16",
     "react-router-dom": "^5.2.0"
   }
 }
